<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor">

        <TextView
            android:id="@+id/group_creation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/create_group_title"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingVertical="30dp" />

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="20dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:background="@color/primaryColor" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_name_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/group_creation_title"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:textColorHint="@color/secondaryColor"
            app:hintTextColor="@color/secondaryColor"
            app:boxStrokeColor="@color/secondaryDarkColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryDarkColor"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_description_text_field"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/group_name_text_field"
            android:layout_margin="10dp"
            android:hint="@string/description"
            android:textColorHint="@color/secondaryColor"
            app:hintTextColor="@color/secondaryColor"
            app:boxStrokeColor="@color/secondaryDarkColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/secondaryDarkColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/group_description_text_field"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="80dp"
            android:paddingVertical="8dp"
            android:text="@string/import_logo"
            android:textColor="@color/primaryLightColor"
            android:backgroundTint="@color/secondaryColor"
            app:icon="@drawable/ic_baseline_insert_photo_24"
            app:iconTint="@color/primaryLightColor" />

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="@+id/logo_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" />

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logo_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@color/primaryColor"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/validate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="18dp"
            android:src="@drawable/ic_baseline_done_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>